src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');

@keyframes picasso {
	0% {
		transform: translateX(3%);
	}
	100% {
		transform: translateX(-10%);
	}
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	font-size: 14px;
	font-family: 'Roboto', sans-serif;
	height: 100vh;
	width: 100%;
	/* padding: 2rem; */
}

.menu {
	position: absolute;
	top: 0;
	left: 0;
	z-index: 1000;
	width: 150px;
	background: #1b1a1a;
	border-radius: 5px;
	display: none;
	list-style: none;
}

.menu.open {
	display: block;
}

.menu .menu-item {
	padding: 8px 10px;
	font-size: 1rem;
	color: #eee;
	cursor: pointer;
	transition: background-color 0.2s ease-in;
	border-radius: inherit;
}

.menu .menu-item:hover {
	background: #343434;
}

.paint {
	position: relative;
	padding-top: 10px;
	padding-bottom: 50px;
	background-color: rgb(240, 145, 3);
	/* filter: blur(5px); */
	height: 630px;
}

.paint__close {
	position: absolute;
	top: 20%;
	transform: translateY(-13%);
	left: 13px;
	padding: 20px;
	background-color: white;
	border-radius: 50%;
	transition: all 0.3s ease;
	cursor: pointer;
	z-index: 150;
}

.paint__close:before,
.paint__close:after {
	position: absolute;
	top: 19px;
	left: 8px;
	content: '';
	width: 25px;
	height: 3px;
	/* padding: 50px; */
	display: inline-block;
	background-color: red;
}

.paint__close:before {
	transform: rotate(45deg);
}

.paint__close:hover:before {
	transition: all 0.6s ease;
	transform: rotate(360deg);
}
.paint__close:hover:after {
	transition: all 0.6s ease;
	transform: rotate(-360deg);
}

.paint__close:after {
	transform: rotate(-45deg);
	left: 6px;
}

.paint__download {
	position: absolute;
	bottom: 0;
	left: 50%;
	transform: translateX(-50%);
	padding: 12px 30px;
	border: 2px solid black;
	background: transparent;
	border-radius: 10px;
	text-transform: uppercase;
	cursor: pointer;
	transition: all .5s ease-in-out;
}

.paint__download:hover {
	background-color: black;
	color: white;
}

.paint__canvas:hover {
	cursor: crosshair;
}

.tools {
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	left: 10px;
	display: flex;
	list-style: none;
	flex-direction: column;
	gap: 3px;
	width: 50px;
	align-items: center;
	background-color: white;
	border-radius: 25px;
	padding: 11px 0;
	margin: 10px 0;
	z-index: 150;
}
.black,
.yellow,
.blue,
.red,
.green,
.none,
.clear,
.fill {
	width: 33px;
	height: 33px;
	border: 2px solid #be05e3;
	border-radius: 20px;
	transition: all 0.3s ease-in-out;
	cursor: pointer;
}

.black {
	background-color: black;
}

.yellow {
	background-color: yellow;
}

.red {
	background-color: tomato;
}
.green {
	background-color: green;
}

.blue {
	background-color: blue;
}

.none {
	border: none;
	background: url('./assets/none.png') no-repeat center / 20px 20px;
	height: 33px;
	cursor: default;
}

.clear {
	border: none;
	background: url('./assets/clear.png') no-repeat center / 20px 20px;
}

.fill {
	border: none;
	background: url('./assets/clearAll.png') no-repeat center / 20px 20px;
}

.black.active {
	transform: translateX(10px);
	border: 2px solid black;
}

.yellow.active {
	transform: translateX(10px);
	border: 2px solid yellow;
}

.red.active {
	transform: translateX(10px);
	border: 2px solid red;
}

.green.active {
	transform: translateX(10px);
	border: 2px solid green;
}

.blue.active {
	transform: translateX(10px);
	border: 2px solid blue;
}

.clear.active {
	transform: translateX(10px);
}

.black:hover {
	transform: translateX(3px);
	border: 2px solid black;
}
.yellow:hover {
	transform: translateX(3px);
	border: 2px solid yellow;
}
.red:hover {
	transform: translateX(3px);
	border: 2px solid tomato;
}
.green:hover {
	transform: translateX(3px);
	border: 2px solid green;
}
.blue:hover {
	transform: translateX(3px);
	border: 2px solid blue;
}

.clear:hover,
.fill:hover {
	transform: translateX(10px);
}

.paint__canvas {
	background-color: white;
	border-radius: 20px;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.paint__label {
	font-size: 80px;
	font-family: "Rubik Mono One", monospace;
	font-weight: 400;
	font-style: normal;
	animation: picasso 12s infinite linear;
	font-size: sans-serif;
	line-height: 1.3;
	padding: 2px 0;
	white-space: nowrap;
	display: inline-block;

	color: black;
}
.timer_modal-overlay {
	position: fixed;
	left: 40%;
	right: 0;
	top: 40%;
	bottom: 0;
	width: 300px;
	height: 150px;
	border-radius: 15px;

	display: flex;
	justify-content: center;
	align-items: center;

	background: linear-gradient(156deg, rgba(110, 109, 111, 0.197), rgba(255, 255, 255, 0.783));
	z-index: 1000;
	transition: 0.9s ease;
	opacity: 1;
	box-shadow: 3px 6px 5px rgba(110, 109, 111, 0.197);

	animation: 2s show ease;
}

@keyframes show {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@keyframes fade {
	from {
		opacity: 1;
	}
	to {
		opacity: 0;
	}
}

.modal-overlay_hidden {
	animation: fade 1s ease;
	opacity: 0;
}

.modal-form {
	display: flex;
	flex-direction: column;
	gap: 15px;
}

.form-label {
	font-family: 'roboto', sans-serif;
	font-weight: bold;
}

.modal-input {
	border-color: #bdbdbd;
	border-radius: 0.25rem;
	transition: border-color 0.15s ease-in-out, box-shadow 0.25s ease-in-out;
	font-size: larger;
}

.modal-input:focus {
	color: #7d7f80;
	background-color: #fff;
	border-color: #bdbdbd;
	outline: 0;
	box-shadow: 0 0 0 0.2rem rgba(158, 158, 158, 0.25);
}

.modal-button {
	font-family: 'roboto', sans-serif;
	color: #080808;
	background-color: #eea6a6;
	border-color: #bdbdbd;
	border-radius: 15px;
	outline: 0;
	box-shadow: 0 0 0 0.2rem rgba(116, 116, 116, 0.25);
}

.timer {
	animation: show 1.5s ease;
	width: 10rem;
	height: 10rem;
	position: fixed;
	top: 10%;
	right: 5%;
	/* border: 2px solid black; */
	background: radial-gradient(rgba(123, 123, 123, 0.5), rgba(156, 11, 78, 0.5));
	border-radius: 50%;
	display: flex;
	align-items: center;
}

.timer_hidden {
	opacity: 0;
}

.timer-span {
	font-family: 'roboto', sans-serif;
	margin: 0 auto;
	font-weight: bolder;
	font-size: 5rem;
}
.figure-1 {
	border-radius: 50%;
}

.figure-4 {
	border-radius: 50% / 50%;
}

.figure-5 {
	transform: skew(30deg);
}

